FEAT: Create AP and HTTP server to serve captured packets.

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,6 @@ framework = espidf
 monitor_speed = 115200
 board_build.partitions = partitions.csv
 board_build.flash_size = 4MB
+
+extra_scripts = pre:read_env.py
+
